--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,17 @@
     <title>H-Thai-ML Contact</title>
     <!-- Remember to link to your CSS file! -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link 
-    rel="stylesheet" 
-    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
-    crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
     <!-- CONTACT PAGE -->
+    <!-- announcements -->
+    <section id="announcements">
+        <h1>We will be closed for the next holiday</h1>
+    </section>
+
     <!-- TODO: Navbar here -->
     <nav>
         <!--       Nav Start  -->
@@ -24,7 +26,7 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a id = "thisPage" href="contact.html">CONTACT</a></li>
+            <li><a id="thisPage" href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <!-- TODO: Banner Image here-->
@@ -42,11 +44,11 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <i class="fa fa-phone" aria-hidden="true"></i><strong> Phone Number:</strong> (800) 555-HELP 
-            <br><br> 
-            <i class="fa fa-envelope"></i><strong> Customer Service Email: </strong>thaitanic@food.com 
-            <br><br> 
-            <i class="fa fa-address-card"></i><strong>  Address:</strong> 42069 Somewhere USA
+            <i class="fa fa-phone" aria-hidden="true"></i><strong> Phone Number:</strong> (800) 555-HELP
+            <br><br>
+            <i class="fa fa-envelope"></i><strong> Customer Service Email: </strong>thaitanic@food.com
+            <br><br>
+            <i class="fa fa-address-card"></i><strong> Address:</strong> 42069 Somewhere USA
         </p>
 
 
