--- a/menu.html
+++ b/menu.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Thai-ML Menu</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- Remember to link to your CSS file! -->
 </head>
 
 <body>
     <!-- MENU PAGE -->
+    <!-- announcements -->
+    <section id="announcements">
+        <h1>We will be closed for the next holiday</h1>
+    </section>
+
     <!-- TODO: Navbar here -->
     <nav>
         <!--       Nav Start  -->
         <ul class="container-in-nav">
 
             <li><a href="index.html">HOME</a></li>
-            <li><a id = "thisPage"  href="menu.html">MENU</a></li>
+            <li><a id="thisPage" href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
@@ -40,7 +47,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Chicken Satay</td>
+                    <td><i class="fa fa-star" aria-hidden="true"></i>Chicken Satay</td>
                     <td> $7.95</td>
                 </tr>
                 <tr>
@@ -59,14 +66,17 @@
             </thead>
             <tbody>
                 <tr>
-                    Panang Curry $9.95
-                </tr>
-                <tr>
-                    <td>Red Curry</td>
+                    <td><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-fire" aria-hidden="true"></i>Panang
+                        Curry</td>
                     <td> $9.95</td>
                 </tr>
                 <tr>
-                    <td>Yellow Curry</td>
+                    <td><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-fire" aria-hidden="true">Red Curry
+                    </td>
+                    <td> $9.95</td>
+                </tr>
+                <tr>
+                    <td><i class="fa fa-fire" aria-hidden="true">Yellow Curry</td>
                     <td>$8.95</td>
                 </tr>
                 <tr>
@@ -167,6 +177,10 @@
                 </tr>
             </tbody>
         </table>
+        <footer>
+            <p><i class="fa fa-star" aria-hidden="true"></i> our most popular items</p>
+            <p><i class="fa fa-fire" aria-hidden="true"></i> our most spicy items</p>
+        </footer>
     </main>
 </body>
 
