--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,14 @@
     <!-- Remember to link to your CSS file! -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- ABOUT PAGE -->
+    <!-- announcements -->
+    <section id="announcements">
+        <h1>We will be closed for the next holiday</h1>
+    </section>
+
     <!-- TODO: Navbar here -->
     <nav>
         <!--       Nav Start  -->
@@ -16,13 +23,13 @@
 
             <li><a href="index.html">HOME</a></li>
             <li><a href="menu.html">MENU</a></li>
-            <li><a id = "thisPage" href="about.html">ABOUT</a></li>
+            <li><a id="thisPage" href="about.html">ABOUT</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </nav>
     <!-- TODO: Banner Image here-->
-   <div id = "banner">
-        <img id = "banner" src="assets/images/banner.png" alt="banner image">
+    <div id="banner">
+        <img id="banner" src="assets/images/banner.png" alt="banner image">
     </div>
     <main>
         <!-- About page code here -->
@@ -31,13 +38,22 @@
         <h2>Locations</h2>
         <ul>
             <li>420 Plaza St, DaHood</li>
-            <li>119 N. Mesa St. San Pedro</li>
+            <li>119 N. Mesa St. Los Angeles</li>
             <li>24301 Boardwalk Ave. The Beach</li>
             <li>41083 Cliff Rd. The Mountain</li>
         </ul>
         <h2>Origin Story</h2>
         <img src="assets/images/about.jpg" alt="about us picture">
-        <p style = "font-size: large;">A group of us one day decided to join our love for twisted jokes, and Thai food in San Pedro, and H-Thai-ML was born. We decided on the name on a whim, but we also feel it represents what we do.</p>
+        <p style="font-size: large;">Amid the vibrant culinary tapestry of Los Angeles, a group of passionate
+            gastronomes embarked on a flavorful journey to introduce the diverse and captivating world of Thai cuisine
+            to the city's bustling dining scene. Drawn together by their shared love for the intricacies of Thai
+            flavors, aromas, and cultural traditions, they envisioned a Thai food restaurant that would not only
+            tantalize taste buds but also serve as a bridge connecting Angelinos to the rich culinary heritage of
+            Thailand. Inspired by their travels through the bustling street markets of Bangkok and the tranquil coastal
+            villages of Phuket, they set out to create an inviting haven where the warmth of Thai hospitality and the
+            authenticity of time-honored recipes would transport diners to the vibrant streets of Thailand, all while
+            firmly rooted in the heart of Los Angeles.</p>
     </main>
 </body>
+
 </html>
